# rust-os

./: .gitmodules  Cargo.toml
.cargo/: config.toml
kernel/: Cargo.toml  build.rs
kernel/link/: aarch64.ld
kernel/src/: main.rs
kernel/src/arch/: mod.rs
kernel/src/arch/aarch64/: mod.rs
kernel/src/arch/aarch64/boot/: mod.rs
kernel/src/arch/aarch64/cpu/: context.rs  mod.rs
kernel/src/arch/aarch64/interrupts/: mod.rs  vector_table.rs
kernel/src/sync/: mod.rs  spin.rs
my_little_kernel/: Cargo.toml  build.rs
my_little_kernel/.cargo/: config.toml
my_little_kernel/src/: lib.rs  main.rs
my_little_kernel/src/arch/aarch64/: mod.rs
my_little_kernel/src/boot/: mod.rs
my_little_kernel/src/cpu/: mod.rs
my_little_kernel/src/exception/: mod.rs
