[package]
name = "my_little_kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_arch = "aarch64")'.dependencies]
armv8a_semihosting = { path = "../armv8a-semihosting" }
armv8a_panic_semihosting = { path = "../armv8a-panic-semihosting" }

[dependencies]
paste = "1.0.7"
